# monads

./: .gitignore  .pre-commit-config.yaml  example_funcs.py  monads.py  pyproject.toml  readme.md  tcr.py  test_tcr.py
src/monads/: either_monads.py  exc_monads.py  monads.py  type_monad.py
tests/: test_either_monads.py  test_exc_monads.py  test_monads.py
