[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "monads"
version = "0.0.1"
authors = [
    { name = "Vladimir Gorbachuk", email = "vladimirgorbachuk@gmail.com" },
]
description = "TCR-driven monads development"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]
lint = [
    "flake8",
    "mypy"
]


[project.urls]
"Homepage" = "https://github.com/VladimirGorbachuk/monads"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
